--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
       "@auth/*": ["app/auth/*"],
       "@services/*": ["app/services/*"],
       "@interfaces/*": ["app/interfaces/*"],
-      "@components/*": ["app/components/*"],
+      "@shared/*": ["app/shared/*"],
       "@professionals/*": ["app/professionals/*"],
       "@pharmacists/*": ["app/pharmacists/*"],
       "@root/*": ["./*"],
