Add print to prescription

--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@angular/router": "~9.0.7",
     "express": "^4.17.1",
     "jwt-decode": "^2.2.0",
+    "pdfmake": "^0.1.65",
+    "pdfmake-unicode": "0.0.1",
+    "pdfmake-wrapper": "^2.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -34,9 +37,10 @@
     "@angular/cli": "~9.0.7",
     "@angular/compiler-cli": "~9.0.7",
     "@angular/language-service": "~9.0.7",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
+    "@types/pdfmake": "^0.1.12",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
