adds utils and utils alias path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "@services/*": ["app/services/*"],
       "@interfaces/*": ["app/interfaces/*"],
       "@shared/*": ["app/shared/*"],
+      "@utils/*": ["app/utils/*"],
       "@professionals/*": ["app/professionals/*"],
       "@pharmacists/*": ["app/pharmacists/*"],
       "@root/*": ["./*"],
