--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.7",
+    "@angular/animations": "^9.1.2",
     "@angular/cdk": "^9.2.0",
     "@angular/common": "~9.0.7",
     "@angular/compiler": "~9.0.7",
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "angular-animations": "0.0.10",
     "express": "^4.17.1",
     "jwt-decode": "^2.2.0",
     "pdfmake": "^0.1.65",
