--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
-    "heroku-postbuild": "ng build --configuration=production",
+    "heroku-postbuild": "ng build --configuration=dev",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
