--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,10 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.sass"
             ],
-            "scripts": []
+            "scripts": [],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/app/shared/"]
+            }
           },
           "configurations": {
             "production": {
