adds alias path to anitmations directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
       "@utils/*": ["app/utils/*"],
       "@professionals/*": ["app/professionals/*"],
       "@pharmacists/*": ["app/pharmacists/*"],
+      "@animations/*": ["app/animations/*"],
       "@root/*": ["./*"],
     },
     "outDir": "./dist/out-tsc",
